tests/baselines/reference/parserMissingToken1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/MissingTokens/parserMissingToken1.ts (3 errors) ====
    a / finally
        ~~~~~~~
!!! error TS1109: Expression expected.
               
!!! error TS1005: '{' expected.
    ~
!!! error TS2304: Cannot find name 'a'.